canary/overlays/canary/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: myapp
spec:
  selector:
    app: canary-caddy  
  ports:
  - port: 80
    targetPort: 80
